# Library-Kmars

./: .gitignore  README.md  UML diagram.txt  X.csv  imp.py  pyproject.toml  setup.cfg  test.py
notebook/: buildtest.py  visualisation.ipynb
notebooks/: Comparison of Sklearn and Kmars.ipynb  buildtest.py
src/kmars/: __init__.py  _base_k.py  _kmeans.py  _kmedians.py  _kmedoids.py  base_k.py  base_kmeans.py  distance_metrics.py  kmeans.py  kmeans_euclidean.py  kmedians.py  kmedoids.py
src/kmars/_submodules/: distance_metrics.py
src/kmars/modules/: distance_metrics.py
src/tests/: buildtest.py
tests/: Untitled.ipynb  asd.py  asdas.py  blobs.csv  buildtest.ipynb  buildtest.py  import test.py  kmeans_euclidean_centroids.csv  kmeans_euclidean_initcentroids.csv  kmeans_euclidean_labelss.csv  test.py  visualisation.ipynb
