[build-system]
requires = [
    "hatchling",
    "numpy>=1.20"
    ]
build-backend = "hatchling.build"

[project]
name = "kmars_release_test"
version = "0.1.0"
authors = [{ name="Jerrold Koh"}]
description = "A library for K-clustering algorithms with multiple distance metrics"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jerrold110/Library-Kmars"




