[build-system]
requires = [
    "hatchling",
    "numpy>=1.20"
    ]
build-backend = "hatchling.build"

[project]
name = "kmars"
version = "0.2.1"
authors = [{ name="Jerrold Koh"}]
description = "A library for K-clustering algorithms with multiple distance metrics"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jerrold110/Library-Kmars"




